<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <ListPreference
            android:key="idioma"
            android:title="@string/configuracion_idioma"
            android:summary="@string/selecciona_idioma"
            android:entries="@array/languages_array"
            android:entryValues="@array/language_values"
            android:defaultValue="en" />

        <SwitchPreferenceCompat
            android:key="eliminar_todos_pokemon"
            android:title="@string/delete_pokemon"
            android:summary="@string/enable_deletion"
            android:defaultValue="false" />

        <Preference
            android:key="about"
            android:title="@string/about_title"
            android:summary="@string/about_message" />

        <Preference
            android:key="logout"
            android:title="@string/logout"
            android:summary="@string/logout_message" />
</PreferenceScreen>
