<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_capturedPokemonsFragment">

    <fragment
        android:id="@+id/nav_capturedPokemonsFragment"
        android:name="com.descolar.catchpokemon.CapturedPokemonsFragment"
        android:label="@string/tab_captured"
        tools:layout="@layout/fragment_captured_pokemons" />

    <fragment
        android:id="@+id/nav_pokedex"
        android:name="com.descolar.catchpokemon.PokedexFragment"
        android:label="@string/tab_pokedex"
        tools:layout="@layout/fragment_pokedex" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.descolar.catchpokemon.SettingsFragment"
        android:label="@string/tab_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
