<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <!-- Logo de la aplicación -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="343dp"
        android:layout_height="295dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <!-- Campo de correo electrónico -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/email_hint"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <!-- Campo de contraseña -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="8dp"
        android:backgroundTint="@color/colorAccent"
        android:padding="12dp" />

    <!-- Botón de iniciar sesión -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:padding="12dp" />

    <!-- Botón de iniciar sesión con Google -->
    <Button
        android:id="@+id/googleLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button_google"
        android:text="@string/google_login_button"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:drawablePadding="8dp"
        android:padding="12dp" />

    <!-- Texto con enlace de registro -->
    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/googleLoginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/no_account"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />
</RelativeLayout>
